Trying to test esp32-cam and do some fixes in interface (Défauts overflow-y: auto)

--- a/frontend/styles/interface.css
+++ b/frontend/styles/interface.css
@@ -275,6 +275,8 @@ h1, h2, h3 {
 .defects-panel ul {
     list-style: none;
     margin-top: 10px;
+    max-height: 150px;
+    overflow-y: auto;
 }
 
 .defect {
